# reality-lang

./: .editorconfig  .gitignore  .gitmodules  .stan.toml  Cargo.toml  LICENSE  cabal.project  cabal.project.local  config.toml  fourmolu.yaml  hie.yaml  reality.cabal
app/: Main.hs
crates/reality-anf/: Cargo.toml
crates/reality-anf/src/: lib.rs
crates/reality-ast/: Cargo.toml
crates/reality-ast/src/: lib.rs  llir.rs
crates/reality-ast/src/internal/: annotation.rs  literal.rs  mod.rs  types.rs
crates/reality-cgen/: Cargo.toml
crates/reality-cgen/src/: lib.rs
crates/reality-closure/: Cargo.toml
crates/reality-closure/src/: hoisting.rs  lib.rs
crates/reality-error/: Cargo.toml
crates/reality-error/src/: lib.rs
crates/reality-module/: Cargo.toml
crates/reality-module/src/: imports.rs  lib.rs  modules.rs
crates/reality-parser/: Cargo.toml
crates/reality-parser/src/: lib.rs
crates/reality-specialize/: Cargo.toml
crates/reality-specialize/src/: lib.rs
crates/reality-typechecker/: Cargo.toml
crates/reality-typechecker/src/: lib.rs
examples/: actor.rl  concurrent_queue.rl  imports.rl  linked_list.rl  list.rl  main.rl  many.rl  option.rl  string.rl  structures.rl
libc/: Actor.c  String.c
scripts/: analyse.sh  format.sh  install.py
src/: main.rs
src/Control/: Color.hs
src/Control/Monad/: Parser.hs  Result.hs
src/Language/Reality/Backend/: Codegen.hs
src/Language/Reality/Backend/ANF/: Converter.hs
src/Language/Reality/Frontend/: Parser.hs
src/Language/Reality/Syntax/: HLIR.hs  MLIR.hs
std/: error.rl  io.rl  iterator.rl  linked_list.rl  list.rl  map.rl  option.rl  parser.rl  prelude.rl  string.rl  tuple.rl
std/internal/: gc.rl
(+18 files in other folders)
