[package]
name = "reality"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/reality-ast",
    "crates/reality-error",
    "crates/reality-module",
    "crates/reality-parser", "crates/reality-specialize",
    "crates/reality-typechecker",
]

[dependencies]
"reality-ast" = { path = "crates/reality-ast" }
"reality-error" = { path = "crates/reality-error" }
"reality-parser" = { path = "crates/reality-parser" }
"reality-module" = { path = "crates/reality-module" }
"reality-typechecker" = { path = "crates/reality-typechecker" }
"reality-specialize" = { path = "crates/reality-specialize" }

[profile.release]
opt-level = 3
lto = "fat"
