[package]
name = "reality"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [ "crates/reality-anf",
    "crates/reality-ast", "crates/reality-cgen",
    "crates/reality-closure",
    "crates/reality-error",
    "crates/reality-module",
    "crates/reality-parser",
    "crates/reality-specialize",
    "crates/reality-typechecker",
]

[dependencies]
"reality-ast" = { path = "crates/reality-ast" }
"reality-error" = { path = "crates/reality-error" }
"reality-parser" = { path = "crates/reality-parser" }
"reality-module" = { path = "crates/reality-module" }
"reality-typechecker" = { path = "crates/reality-typechecker" }
"reality-specialize" = { path = "crates/reality-specialize" }
"reality-closure" = { path = "crates/reality-closure" }
"reality-cgen" = { path = "crates/reality-cgen" }
"reality-anf" = { path = "crates/reality-anf" }

[profile.release]
opt-level = 3
lto = "fat"
